--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -460,3 +460,176 @@ li.menu-item.current-menu-item a {
 .btn_load-more:hover::after {
     opacity: 1;
 }
+
+
+/*lightbox_css*/
+ /*
+Theme Name: nathalie-mota
+Theme URI: https://motaphoto.com
+*/
+
+/* IMAGE PLEINE ECRAN */
+.lightbox {
+    position: fixed;
+    top: 80px;
+    left: 0;
+    width: 100vw;
+    height: 100%;
+    z-index: 100;
+    background-color: rgba(0, 0, 0, 0.80);
+    color: #FFFFFF;
+    transition: all .3s ease-in-out;
+}
+
+.lightbox.hidden{
+    visibility: hidden;
+}
+
+.lightbox__close,
+.lightbox__prev,
+.lightbox__next {    
+    position: absolute;
+    border: none;
+    /* text-indent : on cache le texte des boutons */
+    text-indent: -3000px;
+    cursor: pointer;
+    opacity:.5;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.lightbox__close:hover,
+.lightbox__prev:hover,
+.lightbox__next:hover {
+    opacity:1;
+}
+
+.lightbox__prev,
+.lightbox__next {
+    width: 50px;
+    height: 100%;
+    transform: scale(2);
+    top: 0;
+    margin-top: -4px;
+    z-index: 11;
+}
+
+.lightbox__close{
+    background: url("../../assets/images/close.svg") center center / 100% 100% no-repeat;
+    width: 25px;
+    height: 25px;
+    position: fixed;
+    top: 100px;
+    right: 40px;
+    z-index: 12;
+}
+
+.lightbox__prev {
+    background: url("../../assets/images/arrow-previous.svg") center center / 100% 100% no-repeat;
+    left: 20px;
+}
+
+.lightbox__next {
+    background: url("../../assets/images/arrow-next.svg") center center / 100% 100% no-repeat;
+    right: 20px;
+}
+
+.lightbox .lightbox__container {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;   
+}
+
+.lightbox__container_info,
+.lightbox__container_content {
+    position: relative;
+    justify-content: center;
+    align-items: center; 
+}
+
+.lightbox__container_info {
+    padding-left: 100px;
+    padding-right: 100px;
+}
+
+
+
+
+.lightbox .lightbox__container a {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    object-fit: contain;
+}
+
+.lightbox .lightbox__container img {   
+    object-fit: contain;
+    width: 100%;
+    height: auto;
+    max-width: 80%;
+    max-height: 80%;
+}
+
+.lightbox__info {
+    gap: 20px;    
+    align-items: left;
+}
+
+.lightbox .lightbox__container h2,
+.lightbox .lightbox__container p {
+    color: #FFFFFF;
+    opacity: 1;
+}
+
+.lightbox .lightbox__container h2 { 
+    width: 80%;   
+    font-weight: 400;
+    font-size: 16px;
+    padding-top: 10px;
+    text-align: left;  
+}
+
+.lightbox .lightbox__container p {
+    font-size: 10px;
+}
+
+.lightbox .lightbox__container .lightbox__info {    
+    width: 80%;   
+}
+
+.lightbox__info.flexrow {    
+    justify-content: space-between;
+}
+
+.photo-ref, .photo-cat{
+    text-transform: uppercase;
+    font-size: 14px;
+    line-height: 21px;
+
+}
+
+.photo-ref{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+
+
+}
+.photo-cat{
+    font-family: 'sans mono', sans-serif;
+    font-weight: 400;
+
+}
+
+/* Gestion d'une image d'attente de chargement */
+.lightbox__loader {
+    width: 38px;
+    height: 38px;
+    opacity: .5;
+    background: url("../../assets/images/loader.svg") center center no-repeat;
+}
+.lightbox__loader.hidden{
+    visibility: hidden;
+}
