--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -85,7 +85,7 @@ li.menu-item.current-menu-item a {
     text-align: center;
     align-items: center;  
     justify-content: center;
-    z-index: 100;
+    z-index: 2;
     height: 40px;
 }
 
@@ -328,10 +328,12 @@ li.menu-item.current-menu-item a {
     position: relative;
     width: 100%;
     height: 43px;
-    border: 1px solid #000000;
     background-color: #ffffff;
-    border-radius: 0;
     padding: 0 24px;
+}
+
+body .filter-area option:hover{
+    background-color: lightgreen !important;
 }
 
 /* On cache la flèche d'origne des sélecteurs car non modifiable */
@@ -341,6 +343,23 @@ li.menu-item.current-menu-item a {
     border-radius: 8px !important;
     border: solid 1px !important;
     text-transform: uppercase;
+}
+
+body .filter-area select option:select{
+    background-color: lightgreen !important;
+}
+
+select.option-filter option:hover,
+select.option-filter option:checked {
+    box-shadow: 0 0 10px 100px lightgreen inset !important;
+}
+
+select:focus > option:hover { 
+    background: #FFD6D6 !important;
+}
+
+select:focus > option:checked { 
+    background: red !important;
 }
 
 /* supprimer la fléche par défaut en IE 10 et 11 */
