finalisation du code en css pour la page single responsive

--- a/assets/css/single-photo.css
+++ b/assets/css/single-photo.css
@@ -182,6 +182,7 @@
     .photo__info--description,
     .photo__info--image {
         margin: 0 auto;  
+
     }
 
     .photo__info--description {
@@ -190,13 +191,10 @@
         border-bottom: 0px solid #000;
     }
 
-    .container__photo {
-        /* padding: 0 40px; */
-    }
-
     .photo__info--image {
         /* width: auto; */
-        min-width: 265px;
+        /*min-width: 265px;*/
+        width: 90%;
     }
     
     .photo__info--image .container--image {
@@ -216,6 +214,10 @@
     .photo_detail ul {
         width: 100%;
     }
+    .photo_detail ul li{
+        padding-left: 0px !important;
+    }
+
 
     .photo__contact{
         justify-items: center;
@@ -241,6 +243,7 @@
 
     .photo__others {
         padding: 30px 40px;
+        text-align: center;
     }
 
     .photo__others--images {
@@ -259,13 +262,26 @@
     }
 
     .container-common .news-info {
+        position: relative;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        margin: auto;
-        width: 80%;
-        max-width: 600px;
-        height: 500px;
+        width: 100%;
+        z-index: 10;
+    }
+    
+    .news-info img {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        overflow: hidden;
+        object-fit: cover;
+        z-index: -1;
+
+    }
+
+    .container-common .news-info img {
+       height: 100%;
     }
 }
 
@@ -277,7 +293,7 @@
 @media screen and (max-width: 580px) {
     .container-common .news-info {
         width: 90%;
-        max-width: 265px;
-        height: 230px;
+        max-width: 318px;
+        max-height: 278px;
     }
 }
