--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -560,7 +560,7 @@ select:focus > option:checked {
 .btn_load-more::after {
     content: "";
     position: absolute;
-    background: url("./assets/img/camera-svgrepo-com.svg") center center / 100% 100%;
+    background: url("../assets/images/camera-svgrepo-com.svg") center center / 100% 100%;
     background-repeat: no-repeat;    
     top: 50%;
     left: 50%;     
